# cuda-training-series

./: .gitignore  CMakeLists.txt
exercises/hw1/: hello.cu  matrix_mul.cu  vector_add.cu
exercises/hw2/: stencil_1d.cu
exercises/hw3/: readme.md  vector_add.cu
exercises/hw4/: matrix_sums.cu
